--- a/public/demos/terrain-arcgis-lit.html
+++ b/public/demos/terrain-arcgis-lit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mapbox Terrain Demo</title>
+    <title>光照阴影地形</title>
     <style>
         html, body {
             margin: 0;
